# Used-cars-price-predictor-MEXICO

./: .dockerignore  .gitignore  Dockerfile  exploration.ipynb  main.py  model.pkl  mypage.html  predict.py  pyproject.toml  train.py  urls.csv  used_cars_mexico.csv
.ipynb_checkpoints/: exploration-checkpoint.ipynb
app/: predict.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
models/: model.pkl
scraping/: bot_manager.py  cars_scraping.py  url_scraping.py
src/: train.py
tests/: test_predict.py
